# GetTransTool

./: LICENSE  README.md  setup.cfg
src/GetTransTool/: GetCDSLongestFromGTF.py  GetCDSLongestFromGencode.py  GetLongestTransFromGTF.py  GetLongestTransFromGencode.py
