[metadata]
name = GetTransTool
version = 0.0.2
author = laojunjun
author_email = 3219030654@stu.cpu.edu.cn
description = Extract longest transcript or longest CDS transcript from GTF annotation file or gencode transcripts fasta file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/junjunlab/GetTransTool
project_urls =
    Bug Tracker = https://github.com/junjunlab/GetTransTool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    GetLongestTransFromGencode = GetTransTool.GetLongestTransFromGencode:main
    GetLongestTransFromGTF = GetTransTool.GetLongestTransFromGTF:main
    GetCDSLongestFromGencode = GetTransTool.GetCDSLongestFromGencode:main
    GetCDSLongestFromGTF = GetTransTool.GetCDSLongestFromGTF:main